[package]
name = "jfail"
version = "0.0.1"
authors = ["dominik.werder@gmail.com"]

[dependencies]
lazy_static = "1.0.1"

serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.22"

# feature "std" will pull in "backtrace"
failure = { version = "0.1.1", default-features = false, features = ["derive"] }
failure_derive = "0.1.1"

log = "0.4.2"
env_logger = "0.5.10"
