[package]
name = "dfail"
version = "0.0.0"
authors = ["dominik.werder@gmail.com"]

[dependencies]
#serde = "1.0.66"
#serde_derive = "1.0.66"
#serde_json = "1.0.22"

# feature "std" will pull in "backtrace"
failure = { version = "0.1.5", default-features = false, features = ["derive", "std"] }
failure_derive = "0.1.5"
