[package]
name = "dfail"
version = "0.0.0"
authors = ["dominik.werder@gmail.com"]
edition = "2018"

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"

# feature "std" will pull in "backtrace"
failure = { version = "0.1.5", default-features = false, features = ["derive", "std"] }
failure_derive = "0.1.5"
